backend/k8s/clusters/local/apps/ingress/641-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: timetable-service
  namespace: timetable-domain
spec:
  entryPoints: [web]
  routes:
    - match: PathPrefix(`/v1/timetable/`)
      kind: Rule
      middlewares:
        - name: jwt-forward-auth
          namespace: traefik
      services:
        - name: timetable-service
          port: 50051
          scheme: h2c
