backend/k8s/clusters/local/apps/ingress/diogen-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: user-service
  namespace: user-domain
spec:
  entryPoints: [web]
  routes:
    - match: PathPrefix(`/v1/user`)
      kind: Rule
      middlewares:
        - name: jwt-forward-auth
          namespace: traefik
      services:
        - name: user-service
          port: 50051
          scheme: h2c
