backend/k8s/clusters/local/apps/ingress/rbac-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rbac-service
  namespace: rbac-domain
spec:
  entryPoints: [web]
  routes:
    - match: PathPrefix(`/v1/rbac`)
      kind: Rule
      middlewares:
        - name: jwt-forward-auth
          namespace: traefik
      services:
        - name: rbac-service
          port: 50051
          scheme: h2c
